# ChangeLog for sys-apps/openrc
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/openrc/ChangeLog,v 1.325 2015/01/19 15:02:19 blueness Exp $

  19 Jan 2015; Anthony G. Basile <blueness@gentoo.org> openrc-0.13.8.ebuild:
  Stable on arm.  Bug #530120.

  19 Jan 2015; Anthony G. Basile <blueness@gentoo.org> openrc-0.13.8.ebuild:
  Stable on ppc, ppc64 and x86.  Bug #530120

  18 Jan 2015; William Hubbs <williamh@gentoo.org> -openrc-0.13.7.ebuild:
  remove broken version

*openrc-0.13.8 (18 Jan 2015)

  18 Jan 2015; William Hubbs <williamh@gentoo.org> +openrc-0.13.8.ebuild:
  version bump to fix interaction with kmod

  17 Jan 2015; Mikle Kolyada <zlogene@gentoo.org> openrc-0.13.7.ebuild:
  amd64 stable

  16 Jan 2015; Jeroen Roovers <jer@gentoo.org> openrc-0.13.7.ebuild:
  Stable for HPPA (bug #530120).

  15 Jan 2015; William Hubbs <williamh@gentoo.org> -openrc-0.13.1.ebuild,
  -openrc-0.13.2.ebuild, -openrc-0.13.3.ebuild, -openrc-0.13.4.ebuild,
  -openrc-0.13.5.ebuild, -openrc-0.13.6.ebuild:
  Remove broken 0.13.x versions. Bug #531600 was a memory management issue that
  was present in most of this series; it was fixed in 0.13.7, so everyone should
  run this version.

*openrc-0.13.7 (15 Jan 2015)

  15 Jan 2015; William Hubbs <williamh@gentoo.org> +openrc-0.13.7.ebuild:
  version bump

  05 Dec 2014; William Hubbs <williamh@gentoo.org> openrc-9999.ebuild:
  Change reference from git.mk to gitver.mk to match upstream

*openrc-0.13.6 (24 Nov 2014)

  24 Nov 2014; William Hubbs <williamh@gentoo.org> +openrc-0.13.6.ebuild:
  version bump

*openrc-0.13.5 (20 Nov 2014)

  20 Nov 2014; William Hubbs <williamh@gentoo.org> +openrc-0.13.5.ebuild:
  version bump

  14 Nov 2014; Sven Vermeulen <swift@gentoo.org> openrc-0.13.2.ebuild,
  openrc-0.13.3.ebuild, openrc-0.13.4.ebuild:
  Remove sec-policy/selinux-* dependency from DEPEND but keep in RDEPEND (bug
  #527698)

*openrc-0.13.4 (10 Nov 2014)
