@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/openrc
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/openrc/ChangeLog,v 1.325 2015/01/19 15:02:19 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/openrc/ChangeLog,v 1.326 2015/02/05 04:25:59 williamh Exp $
+
+*openrc-0.13.9 (05 Feb 2015)
+
+  05 Feb 2015; William Hubbs <williamh@gentoo.org> +openrc-0.13.9.ebuild:
+  version bump for bug #537996
 
   19 Jan 2015; Anthony G. Basile <blueness@gentoo.org> openrc-0.13.8.ebuild:
   Stable on arm.  Bug #530120.
